<resources>
    <string name="app_name">RainAds</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="username">Username</string>
    <string name="market">Market</string>
    <string name="network">Network</string>
    <string name="withdraw">Withdraw</string>
    <string name="points">RainPoints</string>
    <string name="balance">Balance</string>
    <string name="advertise">Advertise</string>
    <string name="check_internet_connection">"Check internet connection"</string>
    <string name="watch_ad">Watch Ad</string>
    <string name="settings">Settings</string>
    <string name="zero">0</string>
    <string name="btc_address">BTC Address</string>
    <string name="log_out">Log Out</string>
    <string name="loading">Loading</string>
    <string name="referral_code">Referral Code</string>
    <string name="code_copied">Code Copied</string>
    <string name="btc_copied">BTC Address Copied</string>
    <string name="ad_website_url">Ad Website Url</string>
    <string name="ad_duration">Ad Duration</string>
    <string name="cancel_ad">Are you sure you want to exit this ad?</string>
    <string name="title">Title</string>
    <string name="ask_for_referral">If someone recommended you, please consider adding their Referral Code in the field below.</string>
    <string name="before_proceeding">Before proceeding…</string>
    <string name="save">Save</string>
    <string name="skip">Skip</string>
    <string name="duration">Duration</string>
    <string name="price">Price</string>
    <string name="denied">DENIED</string>
    <string name="referrals">Referrals</string>
    <string name="level">Level</string>
    <string name="description">Description</string>
    <string name="country">Country</string>
    <string name="save_ad">SAVE AD</string>
    <string name="logout_confirm">Are you sure you want to log out?</string>
    <string name="countries">Countries</string>
    <string name="search">Search</string>
    <string name="clear_all">Clear All</string>
    <string name="all">All</string>
    <string name="countries_all">Countries (All)</string>
    <string name="s">s</string>
    <string name="my_ads">My Ads</string>
    <string name="new_ad">New Ad</string>
    <string name="soon">Soon!</string>
    <string name="ad_placement">AD PLACEMENT</string>
    <string name="you_haven_t_created_any_ads_yet">You haven\'t created any ads yet…</string>
    <string name="warning">Warning</string>
    <string name="cancel">Cancel</string>
    <string name="important">Important!</string>
    <string name="no">No</string>
    <string name="yes_i_want_50_more">YES, I WANT 50% MORE</string>
    <string name="yes">YES</string>
    <string name="extra_ad_description">You have just earned %1$d points!\nDo you want to earn additional <b>50%%</b>?</string>
    <string name="seconds">seconds</string>
    <string name="deposit">Deposit</string>
    <string name="refresh">Refresh</string>
    <string name="rainads_balance">RainPoints (in BTC)</string>
    <string name="amount">Amount</string>
    <string name="send_deposit_request">SEND DEPOSIT REQUEST</string>
    <string name="send_withdraw_request">SEND WITHDRAW REQUEST</string>
    <string name="you_have_pending_deposit_request">YOU HAVE PENDING DEPOSIT REQUEST!</string>
    <string name="transfer_fee">Transfer Fee</string>
    <string name="amount_to_deposit_to_rainads_balance">Amount in RainPoints</string>
    <string name="balance_on_btc_address">Balance on Address</string>
    <string name="btnContinue">Continue</string>
    <string name="scan_referral_code">Scan Referral Code</string>
    <string name="scanning">Scanning…</string>
    <string name="balance_on_btc_address_points">Balance on address\n(in RainPoints)</string>
    <string name="ok">OK</string>
    <string name="close">Close</string>
    <string name="success">Success</string>
    <string name="info">Info</string>
    <string name="receiving_btc_address">Receiving BTC Address</string>
    <string name="havent_received_email">If you haven\'t received an email yet, you can try resending it.</string>
    <string name="please_confirm_your_email">Please confirm your email</string>
    <string name="withdraw_limit_info">Minimum withdraw limit is 10,000 RainPoints!</string>
    <string name="ad_error">No more ads were found</string>
    <string name="ad_time_error">You need to wait %1$s seconds before watching another ad</string>
    <string name="ad_isnt_loaded">No extra ad found.</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use_text">
        <b>Terms &amp; Conditions</b>\n\n
        By downloading or using the app, these terms will automatically apply to you – you should make sure therefore that you read them carefully before using the app. You’re not allowed to copy, or modify the app, any part of the app, or our trademarks in any way. You’re not allowed to attempt to extract the source code of the app, and you also shouldn’t try to translate the app into other languages, or make derivative versions. The app itself, and all the trade marks, copyright, database rights and other intellectual property rights related to it, still belong to Aleksandar Cvetkoski.\n\n
        Aleksandar Cvetkoski is committed to ensuring that the app is as useful and efficient as possible. For that reason, i reserve the right to make changes to the app or to charge for its services, at any time and for any reason. i will never charge you for the app or its services without making it very clear to you exactly what you’re paying for.\n\n
        The RainAds app stores and processes personal data that you have provided to us, in order to provide my Service. It’s your responsibility to keep your phone and access to the app secure. We therefore recommend that you do not jailbreak or root your phone, which is the process of removing software restrictions and limitations imposed by the official operating system of your device. It could make your phone vulnerable to malware/viruses/malicious programs, compromise your phone’s security features and it could mean that the RainAds app won’t work properly or at all.\n\n
        You should be aware that there are certain things that Aleksandar Cvetkoski will not take responsibility for certain functions. The app will require to have an active internet connection. The connection can be Wi-Fi, or provided by your mobile network provider, but Aleksandar Cvetkoski cannot take responsibility for the app not working at full functionality if you don’t have access to Wi-Fi, and you don’t have any of your data allowance left.\n\n
        If you’re using the app outside of an area with Wi-Fi, you should remember that your terms of the agreement with your mobile network provider will still apply. As a result, you may be charged by your mobile provider for the cost of data for the duration of the connection while accessing the app, or other third party charges. In using the app, you’re accepting responsibility for any such charges, including roaming data charges if you use the app outside of your home territory (i.e. region or country) without turning off data roaming. If you are not the bill payer for the device on which you’re using the app, please be aware that we assume that you have received permission from the bill payer for using the app.\n\n
        Along the same lines Aleksandar Cvetkoski cannot always take responsibility for the way you use the app i.e. You need to make sure that your device stays charged – if it runs out of battery and you can’t turn it on to avail the Service, Aleksandar Cvetkoski cannot accept responsibility.\n\n
        With respect to Aleksandar Cvetkoski’s responsibility for your use of the app, when you’re using the app, it’s important to bear in mind that although we endeavor to ensure that it is updated and correct at all times, i do rely on third parties to provide information to me so that I can make it available to you. Aleksandar Cvetkoski accepts no liability for any loss, direct or indirect, you experience as a result of relying wholly on this functionality of the app.\n\n
        At some point, i may wish to update the app. The app is currently available on Android – the requirements for system (and for any additional systems we decide to extend the availability of the app to) may change, and you’ll need to download the updates if you want to keep using the app. Aleksandar Cvetkoski does not promise that it will always update the app so that it is relevant to you and/or works with the Android version that you have installed on your device. However, you promise to always accept updates to the application when offered to you, I may also wish to stop providing the app, and may terminate use of it at any time without giving notice of termination to you. Unless we tell you otherwise, upon any termination, (a) the rights and licenses granted to you in these terms will end; (b) you must stop using the app, and (if needed) delete it from your device.\n\n
        <b>Changes to This Terms and Conditions</b>\n\n
        I may update our Terms and Conditions from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Terms and Conditions on this page. These changes are effective immediately after they are posted on this page.\n\n
        <b>Contact Us</b>\n\n
        If you have any questions or suggestions about [my/our] Terms and Conditions, do not hesitate to contact me at rainadsnetwork@gmail.com.
    </string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="please_enter_your_email_in_the_input_field_below">Please enter your email in the input field below.</string>
    <string name="send">Send</string>
    <string name="direct_transfer">Direct\nTransfer</string>
    <string name="send_rainpoints_to_any_user">Send RainPoints to any user</string>
    <string name="available_rainpoints">Available</string>
    <string name="_0_0">0.0</string>
    <string name="to">To</string>
    <string name="confirm">Confirm</string>
    <string name="receiver_id">Receiver ID</string>
    <string name="confirm_withdraw">Confirm withdraw</string>
    <string name="withdraw_balance_info_disclaimer">The balance will be automatically deducted after the payout period.</string>
    <string name="withdraw_payout_info">Payouts are every Monday 20:00 CET</string>
</resources>