<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:background="@drawable/background_rounded_corners_12"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/before_proceeding"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:lineSpacingExtra="4dp"
        android:text="@string/ask_for_referral"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etReferral"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_background_normal"
        android:hint="@string/referral_code"
        android:inputType="text"
        android:textSize="12sp" />


    <Button
        android:id="@+id/btnScanCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:background="@drawable/menu_item_gradient_background"
        android:drawableStart="@drawable/ic_qr_scanner"
        android:drawablePadding="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="@string/scan_referral_code"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_green_normal"
        android:text="@string/btnContinue"
        android:textColor="@color/white" />

</LinearLayout>