<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="40dp"
    android:layout_marginEnd="40dp"
    android:background="@drawable/background_rounded_corners_12"
    android:minWidth="320dp"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/warning"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:lineSpacingExtra="4dp"
        android:text="@string/logout_confirm"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnLogOut"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:background="@drawable/button_red_normal"
            android:text="@string/log_out"
            android:textColor="@color/white" />

        <View
            android:layout_width="0dp"
            android:layout_height="10dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnCancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:background="@android:color/transparent"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimaryLight" />
    </LinearLayout>

</LinearLayout>