<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/background_rounded_corners_12"
    android:padding="24dp">

    <TextView
        android:id="@+id/tvExtraAdTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/important"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvExtraAdDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvExtraAdTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:lineSpacingExtra="4dp"
        android:text="@string/extra_ad_description"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnNo"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_below="@id/tvExtraAdDescription"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_red_normal"
        android:text="@string/no"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btnYes"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_below="@id/btnNo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_green_normal"
        android:text="@string/yes_i_want_50_more"
        android:textColor="@color/white"
        android:textSize="14sp" />

</RelativeLayout>